@@ -3,9 +3,18 @@ Carlos Rueda  -  http://marinemetadata.org
 
 ChangeLog
 
+2009-05-22
+	- Author subtree now includes all usernames (if user is logged)
+	
 2009-05-18
 	- OntMdServiceImpl: fixed a recently introduced bug in getOntologyInfoFromRegistry:
 		prepareOntologyInfo was not called in the "new mechanism"
+		
+	- Login: Capture role when user logs in.
+	
+	- OntologyUploader: if user logged in is an administrator, a special handling is done to
+	  allow the submission of an ontology (either brand new, or new version) to be associated
+	  to another userId. 
 	
 2009-05-13
 	- Moved types from ...client related with the proper metadata editor to new package ...client.metadata:
